# Task_EGT_KMS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
client_side/: CMakeLists.txt  main.cpp
client_side_tkinter/: main.py
common/: connection.cpp  connection.h  defines.h  messages.proto
server_side/: CMakeLists.txt  client_connection.cpp  client_connection.h  logger.cpp  logger.h  main.cpp  user_data.cpp  user_data.h
